@@ -5,7 +5,7 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: index.py,v 1.30 2004/12/25 01:36:24 port001 Exp $
+# $Id: index.py,v 1.31 2004/12/25 21:05:03 port001 Exp $
 #
 
 """
@@ -46,13 +46,15 @@ from Session import Session
 import Template as TemplateHandler
 from GLSRException import GLSRException
 from Validation import CheckPageRequest
-from Function import start_timer, stop_timer, eval_timer
+from Function import start_timer, stop_timer, eval_timer, values
 
 from site_modules import Redirect
 
 class RequestHandler(cgi.Handler):
 
     def process(self, req):
+
+        setattr(cgi.Request, values.__name__, values)
 
         Dispatcher = _PageDispatch(req)
 
