@@ -3,42 +3,44 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: Page_Search.py,v 1.5 2004/12/18 22:05:18 port001 Exp $
+# $Id: Page_Search.py,v 1.6 2004/12/25 21:05:03 port001 Exp $
 #
 
-import Config
-from site_modules import SiteModule
-
-import Script
 import User
+import Config
+import Script
 import Category
 import Language
+
+from site_modules import SiteModule
 
 __modulename__ = "Page_Search"
 
 class Page_Search(SiteModule):
 
-    def __init__(self, **args):
+    def __init__(self, req, **args):
 
-        self.template = Config.Template["script_search"]
-        self.form = args["form"]
+        self.req = req
+
+        self.page = args['page']
+        self.template = Config.Template['script_search']
 
     def _set_params(self):
         
-        if self.form.has_key("search"):
+        if self.req.values('search') != None:
             scripts = self._search()
 
-        elif self.form.has_key("search_submitter_id"):
+        elif self.req.values('search_submitter_id') != None:
             scripts = self._search_submitter()
 
-        elif self.form.has_key("list_all"):
+        elif self.req.values('list_all') != None:
             scripts = self._list_all()
 
         else:
             return
 
         self.template = Config.Template["view_scripts"]
-        submitter_id = self.form.getvalue("search_submitter_id", 0)
+        submitter_id = self.req.values("search_submitter_id", 0)
 
         row = "even"
         for script in scripts:
@@ -67,26 +69,26 @@ class Page_Search(SiteModule):
         script_obj = Script.Script()
         terms = {}
 
-        if self.form.has_key("name"):
-            terms["name"] = self.form.getvalue("name")
+        if self.req.values('name') != None:
+            terms["name"] = self.req.values("name")
 
-        if self.form.has_key("descr"):
-            terms["descr"] = self.form.getvalue("descr")
+        if self.req.values('descr') != None:
+            terms["descr"] = self.req.values('descr')
 
-        if self.form.has_key("submitter"):
+        if self.req.values('submitter') != None:
 
             user_obj = User.User()
-            user_id = user_obj.GetUid(self.form.getvalue("submitter"))
+            user_id = user_obj.GetUid(self.req.values('submitter'))
             terms["submitter_id"] = user_id
 
-        recent_only = self.form.getvalue("most_recent")
+        recent_only = self.req.values('most_recent')
 
         return script_obj.Search(terms)
 
     def _search_submitter(self):
 
         script_obj = Script.Script()
-        submitter_id = self.form.getvalue("search_submitter_id")
+        submitter_id = self.req.values('search_submitter_id')
         scripts = script_obj.ListScripts({"submitter_id": submitter_id})
         
         return scripts
