@@ -2,9 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.34 2004/12/25 01:36:24 port001 Exp $
+# $Id: ChangeLog,v 1.35 2004/12/25 21:05:03 port001 Exp $
 
 24 Dec 2004; Ian Leitch <port001@gentoo.org>:
+ * Add a 'values' method to the cgi.Request class at runtime.
+   Provides an easier way to retrieve form values. 
  * Rewrote the Session module
  * Converted index to use fastcgi
    NOTE: This has broken most modules, though not hard to fix.
